--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -8,15 +8,22 @@
 
 <h1>어서오세요! <br> '스파르타_마켓'입니다 </h1>
 
-<a href="{% url 'accounts:signup' %}">회원가입</a>
-
+{% if user.is_authenticated %}
+<a href="{% url 'users:profile' user.username %}">내 프로필</a>
+{% else %}
 <a href="{% url 'accounts:login' %}">로그인</a>
+{% endif %}
+
 
 <a href="{% url 'products:products' %}">물건 목록 보기</a>
 
 <a href="{% url 'products:create' %}">상품 등록하기</a>
 
-<a href="">내 프로필</a>
+
+ {% comment %} <a href="{% url 'users:users' %}">user페이지로</a>  프로필과 별도로 유저 페이지가 과연 필요한가... {% endcomment %} 
+
+
+
 
 
 {% endblock content %}
