--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -4,7 +4,15 @@
 
     <h2>상품 상세 페이지</h2>
     <p>제목: {{ Product.title }}</p>
-    <p>작성자: {{ Product.author.username }}</p>
+
+   
+    <a href="{% url 'users:profile' username=Product.author.username %}">
+        <button>작성자: {{ Product.author }}</button>
+    </a>
+    
+
+<br>
+
 
     {% if Product.image %}
         <img src="{{ Product.image.url }}">
