--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,15 @@
 img {
     width: 200px;
   }
+
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .card {
+    width: calc(33.33% - 20px); 
+    margin-bottom: 20px; 
+  }
